2005-07-26 Mikhail Khodjaiants
	Bug 105234: Wrong watchpoint type.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-07-07 Alain Magloire
	Try to suspend the target before disconnecting.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java

2005-07-04 Alain Magloire
	Base on a patch from Chris Wiebe.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java

2005-06-27 Alain Magloire
	Bug when parsing "int *&" corrected.
	Change in ICDIReferenceValue.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/CdiResource.properties
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi;/org/eclipse/cdt/debug/mi/core/cdi/model/CharValue.java
	* cdi;/org/eclipse/cdt/debug/mi/core/cdi/model/IntergralValue.java
	* cdi;/org/eclipse/cdt/debug/mi/core/cdi/model/PointerValue.java
	* cdi;/org/eclipse/cdt/debug/mi/core/cdi/model/ReferenceValue.java
	* mi/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2005-05-16 Alain Magloire
	Fix PR 91975
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-05-12 Alain Magloire
	Fix PR 94841
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-04-29 Alain Magloire
	Fix PR 90090 PR 93317
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManger.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/ExitedEvent.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java

2005-02-01 Alain Magloire
	Part of Fix for PR 84165
	We check in the expression is a number and
	add a "*" for address watchpoint
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-01-20 Mikhail Khodjaiants
	Fix for bug 83355: The disable/enable breakpoints durning debugging acts weird.
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\model\Breakpoint.java