@@ -1,3 +1,9 @@
+2005-08-04 Alain Magloire
+	Fix for 92446
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Value.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
+
 2005-07-26 Mikhail Khodjaiants
 	Bug 105234: Wrong watchpoint type.
 	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
